@@ -2,6 +2,13 @@
 	    Alan Hayward  <alan.hayward@arm.com>
 	    David Sherwood  <david.sherwood@arm.com>
 
+	* gcc-interface/decl.c (validate_size): Use NARROWEST_INT_MODE
+	instead of GET_CLASS_NARROWEST_MODE (MODE_INT).
+
+2017-08-30  Richard Sandiford  <richard.sandiford@linaro.org>
+	    Alan Hayward  <alan.hayward@arm.com>
+	    David Sherwood  <david.sherwood@arm.com>
+
 	* gcc-interface/decl.c (check_ok_for_atomic_type): Use
 	is_a <scalar_int_mode>.
 	* gcc-interface/trans.c (Pragma_to_gnu): Likewise.
